--- a/Laroni-Travel/View/ReizenView.xaml
+++ b/Laroni-Travel/View/ReizenView.xaml
@@ -324,6 +324,11 @@
                         <TextBlock>Verwijderen uit Reis</TextBlock>
                     </StackPanel>
                 </Button>
+                <!--<Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="12" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="DeelnemersBetaald">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock>Update betaald</TextBlock>
+                    </StackPanel>
+                </Button>-->
             </Grid>
         </ScrollViewer>
         <Grid Width="200" HorizontalAlignment="Left" Background="#060047">
