--- a/Laroni-Travel/View/OpleidingView.xaml
+++ b/Laroni-Travel/View/OpleidingView.xaml
@@ -45,6 +45,7 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
                 <TextBox
                     Text="{Binding ID}"
@@ -56,10 +57,10 @@
         Style="{StaticResource MaterialDesignOutlinedTextBox}"
         TextWrapping="Wrap"
         VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
-                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="0" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="Zoeken">
+                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="0" Grid.Column="2" Margin="15" Background="#CBA0AE" Command="{Binding}" CommandParameter="Zoeken">
                     <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" />
-                        <TextBlock>Zoeken</TextBlock>
+                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" Foreground="#3D004E" />
+                        <TextBlock Foreground="#3D004E">Zoeken</TextBlock>
                     </StackPanel>
                 </Button>
                 <Label Foreground="White" Grid.Row="0" Grid.Column="4" Margin="15">
@@ -195,7 +196,7 @@
                     TextWrapping="Wrap"
                     VerticalScrollBarVisibility="Auto"
                     Grid.Row="4" Grid.Column="2" Background="White" Margin="10" />
-                
+
                 <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="3" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenOpleiding">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="FloppyDisk" Margin="0 0 10 0" />
@@ -220,8 +221,9 @@
                         <TextBlock>Annuleren</TextBlock>
                     </StackPanel>
                 </Button>
-                <Label Content="Deelnemers opleiding" Foreground="White" Grid.Row="8" Grid.Column="0" Margin="15" FontSize="25" />
-                <ListView ItemsSource="{Binding Deelnemers}" Foreground="white" Grid.Row="9" Grid.Column="0" Margin="15" SelectedItem="{Binding SelectedDeelnemerOpleiding}">
+                <Separator Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Margin="0 15 0 15" BorderBrush="White" BorderThickness="5" />
+                <Label Content="Deelnemers opleiding" Foreground="White" Grid.Row="9" Grid.Column="0" Margin="15" FontSize="25" />
+                <ListView ItemsSource="{Binding Deelnemers}" Foreground="white" Grid.Row="10" Grid.Column="0" Margin="15" SelectedItem="{Binding SelectedDeelnemerOpleiding}">
                     <ListView.View>
                         <GridView>
                             <GridView.ColumnHeaderContainerStyle>
@@ -233,10 +235,12 @@
                                 </Style>
                             </GridView.ColumnHeaderContainerStyle>
                             <GridViewColumn DisplayMemberBinding="{Binding DeelnemerId}" Header="Deelnemer ID" />
-                            <GridViewColumn DisplayMemberBinding="{Binding Deelnemer.Familienaam}" Header="Naam" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Deelnemer.VolledigeNaam}" Header="Naam" />
                         </GridView>
                     </ListView.View>
                 </ListView>
+                <Separator Grid.Row="11" Grid.Column="0" Margin="0 15 0 15" BorderBrush="White" BorderThickness="5" Grid.ColumnSpan="5" />
+                <Label Content="Deelnemers toevoegen" Foreground="White" Grid.Row="12" Grid.Column="0" Margin="15" FontSize="25" />
                 <TextBox
                     Text="{Binding Familienaam}"
                     materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
@@ -246,11 +250,11 @@
                     IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBox}"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
                     TextWrapping="Wrap"
-                    VerticalScrollBarVisibility="Auto" Grid.Row="9" Grid.Column="1" Foreground="Black" Background="White" Margin="15" />
-                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="9" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="ZoekenDeelnemer">
+                    VerticalScrollBarVisibility="Auto" Grid.Row="13" Grid.Column="0" Foreground="Black" Background="White" Margin="15" />
+                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="13" Grid.Column="1" Margin="15" Background="#CBA0AE" Command="{Binding}" CommandParameter="ZoekenDeelnemer">
                     <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" />
-                        <TextBlock>Zoeken</TextBlock>
+                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" Foreground="#3D004E" />
+                        <TextBlock Foreground="#3D004E">Zoeken</TextBlock>
                     </StackPanel>
                 </Button>
                 <DataGrid ItemsSource="{Binding DeelnemersLijst}"
@@ -258,7 +262,8 @@
                   AutoGenerateColumns="False" IsReadOnly="True"
                   AlternatingRowBackground="#BC80AB"
                   Background="LightGray"
-                  Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="2" Margin="10">
+                  Grid.Row="14" Grid.Column="0
+                          " Grid.ColumnSpan="2" Margin="10">
                     <DataGrid.Style>
                         <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource MaterialDesignDataGrid}">
                             <Style.Triggers>
@@ -271,15 +276,15 @@
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Voornaam}" Header="Voornaam" />
                         <DataGridTextColumn Binding="{Binding Familienaam}" Header="Naam" />
-                        <DataGridTextColumn Binding="{Binding GeboortedatumInfo}" Header="Leeftijd" />
+                        <DataGridTextColumn Binding="{Binding Leeftijd}" Header="Leeftijd" />
                     </DataGrid.Columns>
                 </DataGrid>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="10" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenDeelnemerOpleiding">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="12" Grid.Column="1" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenDeelnemerOpleiding">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock>Toevoegen aan opleiding</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="11" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenDeelnemerOpleiding">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="9" Grid.Column="1" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenDeelnemerOpleiding">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock>Verwijderen uit opleiding</TextBlock>
                     </StackPanel>
