--- a/Laroni-Travel/View/ReizenView.xaml
+++ b/Laroni-Travel/View/ReizenView.xaml
@@ -45,6 +45,7 @@
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
                 </Grid.RowDefinitions>
                 <TextBox
                     Text="{Binding ID}"
@@ -56,10 +57,10 @@
                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
                     TextWrapping="Wrap"
                     VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
-                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="0" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="Zoeken">
+                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="0" Grid.Column="2" Margin="15" Background="#CBA0AE" Command="{Binding}" CommandParameter="Zoeken">
                     <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" />
-                        <TextBlock>Zoeken</TextBlock>
+                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" Foreground="#3D004E" />
+                        <TextBlock Foreground="#3D004E">Zoeken</TextBlock>
                     </StackPanel>
                 </Button>
                 <Label Foreground="White" Grid.Row="0" Grid.Column="4" Margin="15">
@@ -248,8 +249,9 @@
                         <TextBlock>Annuleren</TextBlock>
                     </StackPanel>
                 </Button>
-                <Label Content="Deelnemers reis" Margin="15" Foreground="White" FontSize="25" Grid.Row="8" Grid.Column="0" />
-                <ListView ItemsSource="{Binding DeelnemersRecord}" Foreground="White" Grid.Row="9" Grid.Column="0" Margin="15" SelectedItem="{Binding SelectedDeelnemerReis}">
+                <Separator Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5" Margin="0 15 0 15" BorderBrush="White" BorderThickness="5" />
+                <Label Content="Deelnemers reis" Margin="15" Foreground="White" FontSize="25" Grid.Row="9" Grid.Column="0" />
+                <ListView ItemsSource="{Binding DeelnemersRecord}" Foreground="White" Grid.Row="10" Grid.Column="0" Margin="15" SelectedItem="{Binding SelectedDeelnemerReis}">
                     <ListView.View>
                         <GridView>
 
@@ -262,7 +264,7 @@
                                 </Style>
                             </GridView.ColumnHeaderContainerStyle>
                             <GridViewColumn DisplayMemberBinding="{Binding DeelnemerId}" Header="Deelnemer ID" />
-                            <GridViewColumn DisplayMemberBinding="{Binding Deelnemer.Familienaam}" Header="Naam" />
+                            <GridViewColumn DisplayMemberBinding="{Binding Deelnemer.VolledigeNaam}" Header="Naam" />
                             <GridViewColumn DisplayMemberBinding="{Binding Deelnemer.Monitor}" Header="Monitor" />
                             <GridViewColumn DisplayMemberBinding="{Binding Deelnemer.HoofdMonitor}" Header="Hoofdmonitor" />
                             <GridViewColumn Header="Betaald">
@@ -277,6 +279,8 @@
                         </GridView>
                     </ListView.View>
                 </ListView>
+                <Separator Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="5" Margin="0 15 0 15" BorderBrush="White" BorderThickness="5" />
+                <Label Content="Deelnemers toevoegen" Margin="15" Foreground="White" FontSize="25" Grid.Row="12" Grid.Column="0" />
                 <TextBox
                     Text="{Binding Familienaam}"
                     materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
@@ -286,11 +290,11 @@
                     IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBox}"
                     Style="{StaticResource MaterialDesignOutlinedTextBox}"
                     TextWrapping="Wrap"
-                    VerticalScrollBarVisibility="Auto" Grid.Row="9" Grid.Column="1" Foreground="Black" Background="White" Margin="15" />
-                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="9" Grid.Column="2" Margin="15" Background="#3D004E" Command="{Binding}" CommandParameter="ZoekenDeelnemer">
+                    VerticalScrollBarVisibility="Auto" Grid.Row="13" Grid.Column="0" Foreground="Black" Background="White" Margin="15" />
+                <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="13" Grid.Column="1" Margin="15" Background="#CBA0AE" Command="{Binding}" CommandParameter="ZoekenDeelnemer">
                     <StackPanel Orientation="Horizontal">
-                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" />
-                        <TextBlock>Zoeken</TextBlock>
+                        <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" Foreground="#3D004E" />
+                        <TextBlock Foreground="#3D004E">Zoeken</TextBlock>
                     </StackPanel>
                 </Button>
                 <DataGrid ItemsSource="{Binding DeelnemersLijst}"
@@ -298,7 +302,7 @@
                   AutoGenerateColumns="False" IsReadOnly="True"
                   AlternatingRowBackground="#BC80AB"
                   Background="LightGray"
-                  Grid.Row="10" Grid.Column="1" Grid.ColumnSpan="2" Margin="10">
+                  Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="2" Margin="10">
                     <DataGrid.Style>
                         <Style TargetType="{x:Type DataGrid}" BasedOn="{StaticResource MaterialDesignDataGrid}">
                             <Style.Triggers>
@@ -311,24 +315,19 @@
                     <DataGrid.Columns>
                         <DataGridTextColumn Binding="{Binding Voornaam}" Header="Voornaam" />
                         <DataGridTextColumn Binding="{Binding Familienaam}" Header="Naam" />
-                        <DataGridTextColumn Binding="{Binding GeboortedatumInfo}" Header="Leeftijd" />
+                        <DataGridTextColumn Binding="{Binding Leeftijd}" Header="Leeftijd" />
                     </DataGrid.Columns>
                 </DataGrid>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="10" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenDeelnemerReis">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="12" Grid.Column="1" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenDeelnemerReis">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock>Toevoegen aan Reis</TextBlock>
                     </StackPanel>
                 </Button>
-                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="11" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenDeelnemerReis">
+                <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="9" Grid.Column="1" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="VerwijderenDeelnemerReis">
                     <StackPanel Orientation="Horizontal">
                         <TextBlock>Verwijderen uit Reis</TextBlock>
                     </StackPanel>
                 </Button>
-                <!--<Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="12" Grid.Column="3" Padding="30 0 30 0" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="DeelnemersBetaald">
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock>Update betaald</TextBlock>
-                    </StackPanel>
-                </Button>-->
             </Grid>
         </ScrollViewer>
         <Grid Width="200" HorizontalAlignment="Left" Background="#060047">
