--- a/Laroni-Travel/View/PersoonView.xaml
+++ b/Laroni-Travel/View/PersoonView.xaml
@@ -48,14 +48,14 @@
                 </Grid.RowDefinitions>
                 <TextBox
                     Text="{Binding Voornaam}"
-        materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
-        VerticalAlignment="center"
-        materialDesign:HintAssist.Hint="Search..."
-        AcceptsReturn="True"
-        IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBox}"
-        Style="{StaticResource MaterialDesignOutlinedTextBox}"
-        TextWrapping="Wrap"
-        VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
+                    materialDesign:TextFieldAssist.TextFieldCornerRadius="20"
+                    VerticalAlignment="center"
+                    materialDesign:HintAssist.Hint="Search..."
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Foreground="Black" Background="White" Margin="15" />
                 <Button materialDesign:ButtonAssist.CornerRadius="20" Height="50" Grid.Row="0" Grid.Column="2" Margin="15" Background="#CBA0AE" Command="{Binding}" CommandParameter="Zoeken">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="Search" Margin="0 0 10 0" Foreground="#3D004E" />
@@ -104,107 +104,98 @@
                 </DataGrid>
                 <TextBox
                     Text="{Binding DeelnemerRecord.Voornaam}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Voornaam"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="3" Grid.Column="0" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Voornaam"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="3" Grid.Column="0" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding DeelnemerRecord.Familienaam}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Familienaam"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="4" Grid.Column="0" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Familienaam"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="4" Grid.Column="0" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding DeelnemerRecord.Geslacht}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Geslacht"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="5" Grid.Column="0" Background="white" Margin="10" />
-                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Geboortedatum" Grid.Row="6" Grid.Column="0" SelectedDate="{Binding Geboortedatum}" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Geslacht"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="5" Grid.Column="0" Background="white" Margin="10" />
+                <DatePicker Margin="10" Style="{StaticResource MaterialDesignOutlinedDatePicker}" Background="white" VerticalAlignment="Top" materialDesign:HintAssist.Hint="Geboortedatum" Grid.Row="6" Grid.Column="0"
+                SelectedDate="{Binding SelectedDeelnemer.Geboortedatum, Mode=TwoWay}" />
                 <TextBox
                     Text="{Binding DeelnemerRecord.Email}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Email"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="7" Grid.Column="0" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Email"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="7" Grid.Column="0" Background="White" Margin="10" />
 
                 <TextBox
                     Text="{Binding DeelnemerRecord.Straatnaam}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Straatnaam"
-    AcceptsReturn="True"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="3" Grid.Column="1" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Straatnaam"
+                    AcceptsReturn="True"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="3" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding DeelnemerRecord.Huisnummer}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Huisnummer"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="4" Grid.Column="1" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Huisnummer"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="4" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding DeelnemerRecord.Postcode}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Postcode"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="5" Grid.Column="1" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Postcode"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="5" Grid.Column="1" Background="White" Margin="10" />
                 <TextBox
                     Text="{Binding DeelnemerRecord.Gemeente}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Gemeente"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="6" Grid.Column="1" Background="White" Margin="10" />
-                <TextBox
-                    Text="{Binding DeelnemerRecord.Wachtwoord}"
-    VerticalAlignment="Top"
-    materialDesign:HintAssist.Hint="Wachtwoord"
-    AcceptsReturn="True"
-    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
-    Style="{StaticResource MaterialDesignOutlinedTextBox}"
-    TextWrapping="Wrap"
-    VerticalScrollBarVisibility="Auto"
-    Grid.Row="7" Grid.Column="1" Background="White" Margin="10" />
+                    VerticalAlignment="Top"
+                    materialDesign:HintAssist.Hint="Gemeente"
+                    AcceptsReturn="True"
+                    IsEnabled="{Binding Path=IsChecked, ElementName=MaterialDesignOutlinedTextBoxEnabledComboBox}"
+                    Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto"
+                    Grid.Row="6" Grid.Column="1" Background="White" Margin="10" />
                 <CheckBox
                     IsChecked="{Binding DeelnemerRecord.Ziekenfonds}"
-        Content="Lid Ziekenfonds" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
+                    Content="Lid Ziekenfonds" Grid.Row="3" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
                 <CheckBox
                     IsChecked="{Binding DeelnemerRecord.Monitor}"
-        Content="Monitor" Grid.Row="4" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
+                    Content="Monitor" Grid.Row="4" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
                 <CheckBox
                     IsChecked="{Binding DeelnemerRecord.HoofdMonitor}"
-        Content="Hoofdmonitor" Grid.Row="5" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
+                    Content="Hoofdmonitor" Grid.Row="5" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
                 <CheckBox
                     IsChecked="{Binding DeelnemerRecord.Admin}"
-        Content="Admin" Grid.Row="6" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
+                    Content="Admin" Grid.Row="6" Grid.Column="2" VerticalAlignment="Center" Margin="15" Foreground="White" />
                 <Button materialDesign:ButtonAssist.CornerRadius="10" Grid.Row="3" Grid.Column="3" Margin="25 10 25 10" Width="auto" HorizontalAlignment="Left" Background="#3D004E" Command="{Binding}" CommandParameter="ToevoegenDeelnemer">
                     <StackPanel Orientation="Horizontal">
                         <materialDesign:PackIcon Kind="FloppyDisk" Margin="0 0 10 0" />
